--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body{
     height: 100vh;
     font-family: "autre", 'Times New Roman', Times, serif;
 }
+::selection { background: transparent; }
+ ::-moz-selection { background: transparent; }
+
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
@@ -59,7 +62,8 @@ body{
 
     margin-top: 10px;
     width: 90%;
-    height: 10vh;
+    margin-bottom: 20px;
+    height: 15vh;
     background-color: #D93C43;
 }
 
@@ -84,15 +88,79 @@ body{
 .rouge .information_lutteur_rouge input::-webkit-input-placeholder{
     color:white;
 }
+.point{
+    height: 76%;
+    width: 90%;
+}
 
+.point .point_total {
+    width: 40%;
+    height: 50%;
+    color:white;
+    background-color: black;
+    margin-right: 10px;
+    cursor: default;
+}
+ .point .point_total span{
+    font-size: 72px;
+}
+ .point_ajout{
+    width: 25%;
+    height: 100%;
+    color:white;
+    text-align: center;
+    margin-right: 10px;
+}
+ .point_ajout span{
+    background-color: #3D3D3D;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+}
+.point_ajout span i{
+    font-size: 10px;
+}
+
+ .point_redu{
+    width: 25%;
+    height: 100%;
+    color:white;
+    text-align: center;
+    margin-right: 10px;
+}
+.point_redu span{
+    background-color: #3D3D3D;
+    cursor: pointer;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.point_redu span:hover{
+    background-color: rgb(75, 75, 75);
+}
+.point_ajout span:hover{
+    background-color: rgb(75, 75, 75);
+}
+.point_redu span i{
+    font-size: 10px;
+}
 .bleu{
     border-top: 10px solid black;
 }
 .bleu .information_lutteur_bleu{
 
     margin-top: 10px;
+    margin-bottom: 20px;
     width: 90%;
-    height: 10vh;
+    height: 15vh;
     background-color: #5D49DE;
 }
 
@@ -131,7 +199,7 @@ body{
     color:white;
 }
 .chrono .detail_chrono .chronome{
-    height: 40vh;
+    height: 60vh;
     width: 100%;
     color:white;
 }
@@ -150,15 +218,135 @@ body{
 .victoire_rouge{
     background-color: #D1262E;
     height: 100%;
+    cursor: pointer;
 } 
+.victoire_rouge i{
+    font-size: 30px;
+}
 .victoire_bleu{
     background-color: #4F1AE8;
     height: 100%;
+    cursor: pointer;
 } 
+
+.victoire_bleu i{
+    font-size: 30px;
+}
+
+/* h */
+.lutteur_avertissement{
+    height: 10vh;
+    background-color: #666666;
+    display: flex;
+    flex-direction: row;
+}
+
+.avertissement_rouge{
+    background-color: #D1262E;
+    height: 100%;
+    cursor: default;
+}
+.avertissement_rouge .rouge_plus_avert{
+    cursor: pointer;
+    color:rgb(133, 0, 0);
+}
+
+.avertissement_rouge .rouge_moins_avert{
+    cursor: pointer;
+    color:rgb(133, 0, 0);
+}
+
+.avertissement_rouge i{
+    font-size: 30px;
+}
+.avertissement_bleu{
+    background-color: #4F1AE8;
+    height: 100%;
+    cursor: default;
+} 
+
+.avertissement_bleu .bleu_plus_avert{
+    cursor: pointer;
+    color:rgb(56, 18, 168);
+
+}
+
+.avertissement_bleu .bleu_moins_avert{
+    cursor: pointer;
+    color:rgb(56, 18, 168);
+}
+.avertissement_bleu i{
+    font-size: 30px;
+}
+
+.lutteur_temps{
+    height: 5vh;
+    background-color: #666666;
+    display: flex;
+    flex-direction: row;
+}
+.manche_temps input{
+    width: 30px;
+}
+.pause input{
+    width: 30px;
+}
+.av{
+    height: 5vh;
+    background-color:#3D3D3D;
+}
 .chrono .bleu{
     background-color: #4F1AE8;
     height: 100%;
     width: 35%;
+}
+
+.poids{
+    height: 10vh;
+    width: 100%;
+    background-color: #3D3D3D;
+}
+.poids span{
+    height: 5vh;
+    width: 100%;
+    text-align: center; 
+    border-bottom: 1px solid white;
+}
+.poids input{
+    width: 100%;
+    height: 20px;
+    padding-top: 3px;
+    background-color: transparent;
+    border:0px solid transparent;
+    outline: none;
+    text-align: center;
+    color: white;
+}
+.style{
+    height: 10vh;
+    width: 100%;
+    background-color: #424443;
+}
+
+.style span{
+    height: 5vh;
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid white;
+
+}
+.style select{
+    width: 100%;
+    height: 30px;
+    background-color: transparent;
+    border:0px solid transparent;
+    outline: none;
+    color: white;
+    text-align: center;
+}
+.style select option{
+    background-color: #424443;
+    border:0px solid transparent;
 }
 
 .list_combat{
